# backend/src/routes/customer/friendRoute.js
@@ -4,8 +4,8 @@ const router = express.Router();
 const friendController = require("../../controllers/customer/friendController");
 
 router.post("/request/:userId", friendController.sendFriendRequest);
-router.put("/accept/:userId", friendController.acceptFriendRequest);
-router.delete("/reject/:userId", friendController.rejectFriendRequest);
+router.post("/accept/:userId", friendController.acceptFriendRequest);
+router.post("/reject/:userId", friendController.rejectFriendRequest);
 router.delete("/unfriend/:userId", friendController.unfriend);
 
 router.get("/list", friendController.getFriends);
